search by color and gender

--- a/src/components/PokeSearcher.css
+++ b/src/components/PokeSearcher.css
@@ -175,3 +175,79 @@
   .type-btns > .type-water {
     background-color: #2a8aeb;
   }
+
+  .color-btns > button {
+    padding: 3px;
+    border: solid 2px#fff;
+    border-radius: 5px;
+    margin: 2px;
+    color: #fff;
+    cursor: pointer;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px, rgb(51, 51, 51) 0px 0px 0px 3px;
+    font-size: 10px;
+  }
+
+  .color-btns > .color-black {
+    background-color: #000000;
+  }
+
+  .color-btns > .color-blue {
+    background-color: #246abb;
+  }
+
+  .color-btns > .color-brown {
+    background-color: #dd8b558e;
+  }
+
+  .color-btns > .color-gray {
+    background-color: #b1afaf;
+  }
+
+  .color-btns > .color-green {
+    background-color: #27c94a;
+  }
+
+  .color-btns > .color-pink {
+    background-color: #e0119b;
+  }
+
+  .color-btns > .color-purple {
+    background-color: #bb2cbb;
+  }
+
+  .color-btns > .color-red {
+    background-color: #e40b0b;
+  }
+
+  .color-btns > .color-white {
+    background-color: #ececec;
+    text-align: black
+  }
+
+  .color-btns > .color-yellow {
+    background-color: #bac247;
+  }
+
+  .gender-btns > button {
+    padding: 3px;
+    border: solid 2px#fff;
+    border-radius: 5px;
+    margin: 2px;
+    color: #fff;
+    cursor: pointer;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px, rgb(51, 51, 51) 0px 0px 0px 3px;
+    font-size: 10px;
+  }
+
+  .gender-btns > .gender-male {
+    background-color: #4c64ee;
+  }
+
+  .gender-btns > .gender-female {
+    background-color: #d63ce4;
+  }
+
+  .gender-btns > .gender-undefined {
+    background-color: #f0d95a;
+  }
+
